opam-version: "2.0"
maintainer: "john.else@gmail.com"
authors: "John Else"
homepage: "https://github.com/johnelse/ocaml-osc"
bug-reports: "https://github.com/johnelse/ocaml-osc/issues"
dev-repo: "git+https://github.com/johnelse/ocaml-osc"
build: [
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "test/unix"] {with-test}
]

depends: [
  "base-unix"
  "dune" {>= "1.6"}
  "ocaml" {>= "4.02.1"}
  "osc"
  "ounit" {with-test}
]
synopsis: "OpenSoundControl Unix library"
description: """
OpenSoundControl client and server implementation, using Unix blocking IO
"""
url {
  src:
    "https://github.com/johnelse/ocaml-osc/archive/master.tar.gz"
}
