opam-version: "2.0"
maintainer: "john.else@gmail.com"
authors: "John Else"
homepage: "https://github.com/johnelse/ocaml-osc"
bug-reports: "https://github.com/johnelse/ocaml-osc/issues"
dev-repo: "git+https://github.com/johnelse/ocaml-osc"
build: [
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "test/core"] {with-test}
]

depends: [
  "base-bytes"
  "dune" {>= "1.6"}
  "ocaml" {>= "4.02.1"}
  "ocplib-endian"
  "ounit" {with-test}
  "rresult"
]
synopsis: "OpenSoundControl core library"
description: """
Library containing types for representing OpenSoundControl messages, as well as
functions for converting OpenSoundControl messages to and from strings.
"""
url {
  src:
    "https://github.com/johnelse/ocaml-osc/archive/master.tar.gz"
}
